--- a/Front/waste_reco_front.html
+++ b/Front/waste_reco_front.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>실시간 생활폐기물 인식 시스템</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Real-time Waste Recognition System</title>
+    <link rel="stylesheet" href="waste_reco_front.css">
 </head>
 <body>
     <div class="container">
-        <h1>실시간 생활폐기물 인식 시스템 구축</h1>
-        <p>이 프로젝트는 시각장애인들의 생활폐기물 인식 문제를 해결하기 위한 것입니다.</p>
-        <p>라즈베리파이 기반의 실시간 재활용품 감지 및 음성 변환 모델을 구현합니다.</p>
-        <button id="moreBtn">More</button>
+        <div class="header">
+            <h1>Real-time Waste Recognition System</h1>
+            <p>Implementation of a real-time recyclable detection and voice conversion model based on Raspberry Pi to solve waste recognition problems for the visually impaired.</p>
+        </div>
+        <button class="more-btn" onclick="goToNextPage()">More</button>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        function goToNextPage() {
+            window.location.href = 'realtime-recognition.html';
+        }
+    </script>
 </body>
 </html>
