--- a/Front/waste_reco_front.html
+++ b/Front/waste_reco_front.html
@@ -17,7 +17,7 @@
 
     <script>
         function goToNextPage() {
-            window.location.href = 'realtime-recognition.html';
+            window.location.href = 'realtime_waste_reco_front.html';
         }
     </script>
 </body>
