--- a/realtime_waste_reco_front.html
+++ b/realtime_waste_reco_front.html
@@ -17,11 +17,18 @@
             <div class="video-feed">
                 <video id="wasteVideo" autoplay muted playsinline></video>
             </div>
+            <div class="controls">
+                <button onclick="selectWaste('Bottles')">Bottles</button>
+                <button onclick="selectWaste('Can')">Can</button>
+                <button onclick="selectWaste('Paper')">Paper</button>
+                <button onclick="selectWaste('Pat')">Pat</button>
+            </div>
         </main>
     </div>
 
     <script>
         const video = document.getElementById('wasteVideo');
+        let selectedWaste = '';  // 사용자가 선택한 쓰레기 종류를 저장
 
         // 카메라 피드를 시작하는 함수
         function startVideoFeed() {
@@ -35,8 +42,33 @@
                 });
         }
 
-        // 페이지 로드 시 카메라 피드 시작
-        window.onload = startVideoFeed;
+        // 음성 출력 함수
+        function outputSpeech(text) {
+            const speech = new SpeechSynthesisUtterance(text);
+            speech.lang = 'en-US';  // 영어로 설정
+            window.speechSynthesis.speak(speech);
+        }
+
+        // 사용자가 선택한 쓰레기 종류를 설정하는 함수
+        function selectWaste(type) {
+            selectedWaste = type;
+            console.log(`Selected waste type: ${selectedWaste}`);
+            outputSpeech(selectedWaste);
+        }
+
+        // 5초마다 음성을 재생하는 함수
+        function startSpeaking() {
+            if (selectedWaste) {
+                outputSpeech(selectedWaste);
+            }
+            setTimeout(startSpeaking, 5000);
+        }
+
+        // 페이지 로드 시 비디오 피드 시작 및 음성 출력 시작
+        window.onload = function() {
+            startVideoFeed();
+            startSpeaking();
+        }
     </script>
 </body>
 </html>
